@@ -1,0 +1,59 @@
+<style type="text/css">
+table.padded-table td { padding:7px; }
+</style>
+<div>
+<p>
+<table width="290" class="padded-table">
+<tr>
+<th><b>Symbol</b></th>
+<th><b>Description</b></th>
+</tr>
+<tr>
+<td>
+<div style="position:relative; float:left; background:lightpink; width:5.0px">&nbsp;</div><div style="position:relative; float:left; background:pink; width:9.0px">&nbsp;</div><div style="position:relative; float:left; background:lightpink; width:18.0px">&nbsp;</div><div style="position:relative; float:left; background:pink; width:9.0px">&nbsp;</div><div style="position:relative; float:left; background:lightpink; width:18.0px">&nbsp;</div>
+</td>
+<td>
+Fixed Spaces
+</td>
+</tr>
+<tr>
+<td>
+<div style="position:relative; float:left; background:orange; width:6px"> &nbsp; </div>
+</td>
+<td>
+Justifying Space
+</td>
+</tr>
+<tr>
+<td>
+<div style="align:center; background: grey; position:relative; float:left; width:41.0px">Text</div>
+</td>
+<td>
+Text, set to width
+</td>
+</tr>
+<tr>
+<td>
+<div style="align:center; background: grey; position:relative; float:left; width:52.0px"><span style="text-decoration: overline; color: blue">TEXT</span></div>
+</td>
+<td>
+Letterspaced sorts
+</td>
+</tr>
+<tr>
+<td>
+<div style="align:center; background: grey; position:relative; float:left; width:56.0px">tru<u><i>ffl</i>e</u></div>
+</td>
+<td>
+Applied ligature
+</td>
+</tr>
+<tr>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
+</p>
+</div>
