@@ -1,5 +1,6 @@
 20130613
 - Ribbon Generator: add a popup describing formatting control codes.
+- Ribbon Generator: add a popup describing soft proof symbols.
 
 20130528
 - Ribbon Generator: give soft proof line numbers more room to breathe.
